--- a/cmake/postinstall/CMakeLists.txt
+++ b/cmake/postinstall/CMakeLists.txt
@@ -1,1 +1,2 @@
-install(SCRIPT "${CMAKE_SOURCE_DIR}/cmake/postinstall/AddToPathWin.cmake")  
+install(SCRIPT "${CMAKE_SOURCE_DIR}/cmake/postinstall/AddToPathWin.cmake" 
+    COMPONENT PostInstall)  
