Made compile_options CMAKE_BUILD_TYPE regex case-insensitive
In previous commit, forgot to mention that one compile option
became contingent on CMAKE_BUILD_TYPE being Release.
The regex-bases check for this is now case-insensitive to handle
the unlikely case where CMAKE_BUILD_TYPE was explicitly specified
to be Release (or relEAse, or RELeaSe, etc etc) by the user upon
running cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ endif()
 add_compile_options(-Wall -Wextra -Wno-unused-parameter -Wno-unknown-pragmas
     -Werror -Wno-error=unused-variable -Wno-error=unused-but-set-variable 
     -Wno-error=pragmas -Wno-error=unused-local-typedefs)
-if(CMAKE_BUILD_TYPE MATCHES Release)
+if(CMAKE_BUILD_TYPE MATCHES "^([R|r][E|e][L|l]|[E|e][A|a][S|s][E|e])$")
   add_compile_options(-fpie)
 endif()
 #
